# rust-utils-terminal

./: CLAUDE.md  Cargo.toml  FUNCTIONS.md  README.md  install.sh
.claude/: settings.local.json
src/: aliases.rs  bookmarks.rs  cleaner.rs  cli.rs  display.rs  functions.rs  lib.rs  main.rs  organizer.rs  packages.rs
