[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shell-explorer"
path = "src/main.rs"

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
tabled = "0.20.0"
colored = "3.0.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
rayon = "1.8"
crossterm = "0.28"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
